; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarCyRound.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarCyRound.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATHVARS1 = common dso_local global i32 0, align 4
@EXPECT_INVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarCyRound to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarCyRound() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @MATHVARS1, align 4
  %3 = call i32 @MATHRND(double 5.432000e-01, i32 5)
  %4 = call i32 @EXPECTCY(i32 0)
  %5 = call i32 @MATHRND(double 5.432000e-01, i32 4)
  %6 = call i32 @EXPECTCY(i32 0)
  %7 = call i32 @MATHRND(double 5.432000e-01, i32 3)
  %8 = call i32 @EXPECTCY(i32 0)
  %9 = call i32 @MATHRND(double 5.432000e-01, i32 2)
  %10 = call i32 @EXPECTCY(i32 0)
  %11 = call i32 @MATHRND(double 5.432000e-01, i32 1)
  %12 = call i32 @EXPECTCY(i32 0)
  %13 = call i32 @MATHRND(double 5.532000e-01, i32 0)
  %14 = call i32 @EXPECTCY(i32 1)
  %15 = call i32 @MATHRND(double 5.532000e-01, i32 -1)
  %16 = load i32, i32* @EXPECT_INVALID, align 4
  %17 = call i32 @MATHRND(double 5.568000e-01, i32 5)
  %18 = call i32 @EXPECTCY(i32 0)
  %19 = call i32 @MATHRND(double 5.568000e-01, i32 4)
  %20 = call i32 @EXPECTCY(i32 0)
  %21 = call i32 @MATHRND(double 5.568000e-01, i32 3)
  %22 = call i32 @EXPECTCY(i32 0)
  %23 = call i32 @MATHRND(double 5.568000e-01, i32 2)
  %24 = call i32 @EXPECTCY(i32 0)
  %25 = call i32 @MATHRND(double 5.568000e-01, i32 1)
  %26 = call i32 @EXPECTCY(i32 0)
  %27 = call i32 @MATHRND(double 5.568000e-01, i32 0)
  %28 = call i32 @EXPECTCY(i32 1)
  %29 = call i32 @MATHRND(double 5.568000e-01, i32 -1)
  %30 = load i32, i32* @EXPECT_INVALID, align 4
  %31 = call i32 @MATHRND(double 4.999000e-01, i32 0)
  %32 = call i32 @EXPECTCY(i32 0)
  %33 = call i32 @MATHRND(double 5.000000e-01, i32 0)
  %34 = call i32 @EXPECTCY(i32 0)
  %35 = call i32 @MATHRND(double 5.001000e-01, i32 0)
  %36 = call i32 @EXPECTCY(i32 1)
  %37 = call i32 @MATHRND(double 1.499900e+00, i32 0)
  %38 = call i32 @EXPECTCY(i32 1)
  %39 = call i32 @MATHRND(double 1.500000e+00, i32 0)
  %40 = call i32 @EXPECTCY(i32 2)
  %41 = call i32 @MATHRND(double 1.500100e+00, i32 0)
  %42 = call i32 @EXPECTCY(i32 2)
  ret void
}

declare dso_local i32 @MATHRND(double, i32) #1

declare dso_local i32 @EXPECTCY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
